force-app/main/default/objects/Account/fields/Count_of_ClossedWon_Opp__c.field-meta.xml
<CustomField>
    <fullName>Count_of_ClossedWon_Opp__c</fullName>
    <label>Count of ClossedWon Opp</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>