force-app/main/default/objects/Account/fields/student__c.field-meta.xml
<CustomField>
    <fullName>student__c</fullName>
    <label>student</label>
    <type>Date</type>
</CustomField>