force-app/main/default/objects/Account/fields/Sum_Of_opps__c.field-meta.xml
<CustomField>
    <fullName>Sum_Of_opps__c</fullName>
    <label>Sum Of2022 Opps</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>lessOrEqual</operation>
        <value>3/1/2022</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>