force-app/main/default/objects/Account/validationRules/AccountNumberCanNotChangeIf.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountNumberCanNotChangeIf</fullName>
    <active>true</active>
    <errorConditionFormula>NOT (ISBLANK(AccountNumber) )  &amp;&amp; 
ISCHANGED( AccountNumber)</errorConditionFormula>
    <errorMessage>Bos ise...</errorMessage>
</ValidationRule>