force-app/main/default/objects/Account/validationRules/Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( REGEX( Phone , &quot;(\\d{11})*&quot;))</errorConditionFormula>
    <errorMessage>11 haneli olmali</errorMessage>
</ValidationRule>