force-app/main/default/objects/Account/validationRules/WebsiteV.validationRule-meta.xml
<ValidationRule>
    <fullName>WebsiteV</fullName>
    <active>true</active>
    <errorConditionFormula>NOT (
       BEGINS(LOWER( Website), &quot;https//&quot;) 
      )</errorConditionFormula>
    <errorMessage>Web sitesi protokol icermeli</errorMessage>
</ValidationRule>